# eapy

./: CMakeLists.txt  README.md
cmake/Modules/: FindMongoDB.cmake
examples/: ArchivesQuery.ipynb  ArchivesQuery.py  EventDescriptor.ipynb  IndexQuery.ipynb  InfoQuery.ipynb  InfoQuery.py  MetaDataStore.py  PVsQuery.ipynb  PVsQuery.py  PVsQueryCLS.ipynb  Snapshot.ipynb  TimeSeries.ipynb  TimeSeries.py
examples/.ipynb_checkpoints/: Archives-checkpoint.ipynb  Archives.bpm-checkpoint.ipynb  ArchivesQuery-checkpoint.ipynb  IndexQuery-checkpoint.ipynb  Info-checkpoint.ipynb  InfoQuery-checkpoint.ipynb  InfoQuery.cls-checkpoint.ipynb  InfoQuery.mongo-checkpoint.ipynb  PVs-checkpoint.ipynb  PVs.bpm-checkpoint.ipynb  PVsQuery-checkpoint.ipynb  PVsQueryCLS-checkpoint.ipynb  RadMon-checkpoint.ipynb  Snapshot-checkpoint.ipynb  Snapshot.bpm-checkpoint.ipynb  TimeSeries-checkpoint.ipynb
include/: Collection.h  Def.h  Document.h  DocumentUtil.h  Session.h  TypeKinds.h
src/: CMakeLists.txt  Collection.cpp  Document.cpp  DocumentUtil.cpp  Session.cpp  eapy.i  eapy.py  eapy_wrap.cpp
