set_source_files_properties(eapy.i PROPERTIES CPLUSPLUS ON)
# set_source_files_properties(eapy.i PROPERTIES SWIG_FLAGS "-includeall")
swig_add_module(eapy python eapy.i Session.cpp Collection.cpp Document.cpp DocumentUtil.cpp)
# swig_link_libraries(eapy ${EA_LIB_CLASSIC})
swig_link_libraries(eapy ${EA_LIB_COMMON})
swig_link_libraries(eapy ${EPICS_LIB_CA})
swig_link_libraries(eapy ${EPICS_LIB_COM})
swig_link_libraries(eapy ${EPICS4_CPP_LIBPVMB})
swig_link_libraries(eapy ${EPICS4_CPP_LIBPVDATA})
swig_link_libraries(eapy ${EPICS4_CPP_LIBPVACCESS})
swig_link_libraries(eapy ${Boost_LIBRARIES} )
swig_link_libraries(eapy ${XERCESC_LIBRARY} rt)
swig_link_libraries(eapy ${PYTHON_LIBRARIES})

# execute_process(COMMAND python -c "from distutils.sysconfig import get_python_lib; print get_python_lib()" OUTPUT_VARIABLE PYTHON_SITE_PACKAGES OUTPUT_STRIP_TRAILING_WHITESPACE)
install(TARGETS _eapy DESTINATION ${PYTHON_DEST})
install(FILES ${CMAKE_BINARY_DIR}/src/eapy.py DESTINATION ${PYTHON_DEST})
